Add Lombok and simplify boilerplate code across entities and DTOs
Co-authored-by: mail.chagas <mail.chagas@gmail.com>